maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:13: error: value North is not a member of object plm.universe.Direction
    var d2=Direction.North
                     ^PledgeMaze:21: warning: enclosing method dir has result type Unit: return value discarded
    return d2
    ^