maze.pledge.PledgeMaze.scala.code
override def run() {
  
  
  def testgauche():Boolean = {
    gauche()
    if (estFaceMur()) {droite();return true}
    droite()
    return false
  }
  
  def dir() {
    var d2=Direction.North
    var d=getDirection()
    if (d==Direction.NORTH) {d2=Direction.EAST}
    if (d==Direction.EAST) {d2=Direction.SOUTH}
    if (d==Direction.SOUTH) {d2=Direction.WEST}
    if (d==Direction.WEST) {d2=Direction.NORTH}
    
    
    return d2
  }

  
  def keepHandOnSideWall():Boolean = {
    var t=false

    if (!estFaceMur && testgauche) {
      avance()
      t=true
      if (!testgauche()) {
        gauche();
        avance();
        if (!testgauche()) {
          gauche();
          avance();
          
        }}}
    return t
                           
  }
  
  droite()
  while (!estSurBiscuit) {
    
    if (getDirection==dir() && !estFaceMur()) {
      avance()
    } else {
    	if (!keepHandOnSideWall()) {droite}
    }
  }
  prendBiscuit()
  
  
  
}